--- a/index.html
+++ b/index.html
@@ -12,28 +12,64 @@
       justify-content: center;
       align-items: center;
       background-color: black;
+      overflow: hidden;
     }
 
     .hello {
       font-size: 50px;
       color: white;
       transition: color 0.3s;
+      z-index: 1;
+      position: relative;
+    }
+
+    .full-screen-pattern {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 0;
     }
   </style>
 </head>
 <body>
   <div id="helloText" class="hello">Hello, World!</div>
+  <div id="pattern" class="full-screen-pattern"></div>
 
   <script>
     const helloText = document.getElementById('helloText');
+    const pattern = document.getElementById('pattern');
 
     helloText.addEventListener('mouseover', function() {
       helloText.style.color = 'blue';
+      generateRandomPattern();
     });
 
     helloText.addEventListener('mouseout', function() {
       helloText.style.color = 'white';
+      pattern.style.background = '';
     });
+
+    function generateRandomPattern() {
+      const colors = ['#FF0000', '#00FF00', '#0000FF', '#FFFF00', '#FF00FF', '#00FFFF', '#FFFFFF'];
+      let generatedPattern = '';
+
+      for (let i = 0; i < 100; i++) {
+        generatedPattern += `${getRandomCoordinate()}px ${getRandomCoordinate()}px ${getRandomColor()}${i === 99 ? '' : ', '}`;
+      }
+
+      pattern.style.background = `radial-gradient(circle at ${getRandomCoordinate()}px ${getRandomCoordinate()}px, ${generatedPattern})`;
+    }
+
+    function getRandomCoordinate() {
+      return Math.floor(Math.random() * window.innerWidth);
+    }
+
+    function getRandomColor() {
+      return colors[Math.floor(Math.random() * colors.length)];
+    }
   </script>
 </body>
 </html>
