--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello Globe</title>
+  <title>Hello Smiley</title>
   <style>
     body {
       margin: 0;
@@ -12,63 +12,27 @@
       justify-content: center;
       align-items: center;
       background-color: black;
-      perspective: 800px;
+      font-size: 50px;
     }
 
     .hello {
-      font-size: 50px;
       color: white;
       transition: color 0.3s;
-      position: relative;
-      z-index: 1;
-    }
-
-    .globe {
-      font-family: monospace;
-      font-size: 20px;
-      color: #00ff00; /* Green for Earth */
-      position: relative;
-      z-index: 0;
-      transform-style: preserve-3d;
-      animation: rotateGlobe 20s linear infinite;
-    }
-
-    @keyframes rotateGlobe {
-      from {
-        transform: rotateY(0);
-      }
-      to {
-        transform: rotateY(360deg);
-      }
     }
   </style>
 </head>
 <body>
-  <div class="hello" id="helloText">Hello, World!</div>
-  <div class="globe">
-    <pre>
-                 _____
-              .-'     '-.
-            .'        /  \
-           /    .-.  (    |
-           |  /     \  `._/
-           | |       |  /
-            \|       / |
-             \      | /
-              '._  .'
-                 ``    
-    </pre>
-  </div>
+  <div class="hello" id="helloText">&#9786;</div>
 
   <script>
     const helloText = document.getElementById('helloText');
 
     helloText.addEventListener('mouseover', function() {
-      helloText.style.color = 'blue';
+      helloText.textContent = '&#128512;'; // Unicode for smiling face with open mouth
     });
 
     helloText.addEventListener('mouseout', function() {
-      helloText.style.color = 'white';
+      helloText.textContent = '&#9786;'; // Unicode for smiling face
     });
   </script>
 </body>
