--- a/index.html
+++ b/index.html
@@ -1,39 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Hello Smiley</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: black;
-      font-size: 50px;
-    }
-
-    .hello {
-      color: white;
-      transition: color 0.3s;
-    }
-  </style>
+  
 </head>
 <body>
-  <div class="hello" id="helloText">&#9786;</div>
-
-  <script>
-    const helloText = document.getElementById('helloText');
-
-    helloText.addEventListener('mouseover', function() {
-      helloText.textContent = '&#128512;'; // Unicode for smiling face with open mouth
-    });
-
-    helloText.addEventListener('mouseout', function() {
-      helloText.textContent = '&#9786;'; // Unicode for smiling face
-    });
-  </script>
+  <h1> "Hello World" </h1>
 </body>
 </html>
