--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  
+    <title>Hello World</title>
+    <style>
+        body {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        #hello {
+            font-size: 48px;
+            background-image: linear-gradient(to right, blue, purple, pink);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+    </style>
 </head>
 <body>
-  <h1> "Hello World" </h1>
+    <div id="hello">Hello World</div>
 </body>
 </html>
