--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="name">Anup Kumar</div>
         <div class="contact">
             Phone: <a href="tel:8368524535">8368524535</a><br>
-            Email: <a href="mailto:mail@anupk.com">mail@anupk.com</a>
-             <a href="whatsapp://send?phone=[8368524535]">Connect with WhatsApp</a>
+            Email: <a href="mailto:mail@anupk.com">mail@anupk.com</a><br>
+             <a href="whatsapp://send?phone=+918368524535">Connect with WhatsApp</a>
 
         </div>
     </div>
