--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #3498db; /* Blue background */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -20,6 +20,8 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
             max-width: 80%;
+            color: black;
+            font-weight: bold; /* Bold text */
         }
         .name {
             font-size: 32px;
@@ -43,8 +45,7 @@
         <div class="contact">
             Phone: <a href="tel:8368524535">8368524535</a><br>
             Email: <a href="mailto:mail@anupk.com">mail@anupk.com</a><br>
-             <a href="whatsapp://send?phone=+918368524535">Connect with WhatsApp</a>
-
+            WhatsApp: <a href="https://wa.me/918368524535">Conect with WhatsApp</a>
         </div>
     </div>
 </body>
