--- a/Consulting career.html
+++ b/Consulting career.html
@@ -454,7 +454,7 @@
                         <div class="row relative">
                             <div class="column full">
                                 <div style="display: block;">
-                                    <a href="#" role="button" class="transition-all cursor-pointer no-underline border-2 border-solid uppercase border-transparent tracking-75 hover:border-transparent rounded-lg mr-0 mb-0 mt-0 ml-0 flex justify-center items-center font-semibold size-21 leading-12 px-8 pt-5 pb-5 text-center" title="" style="color: rgb(255, 255, 255); background-color: rgb(193, 52, 56);" data-bg="rgb(193,52,56)">
+                                    <a href="https://docs.google.com/forms/d/1RHN2iakCPgr-LZGdNiH2vauCIVZWOuvULTCDCqeeEmM/edit?pli=1" target="_blank" role="button" class="transition-all cursor-pointer no-underline border-2 border-solid uppercase border-transparent tracking-75 hover:border-transparent rounded-lg mr-0 mb-0 mt-0 ml-0 flex justify-center items-center font-semibold size-21 leading-12 px-8 pt-5 pb-5 text-center" title="" style="color: rgb(255, 255, 255); background-color: rgb(193, 52, 56);" data-bg="rgb(193,52,56)">
                                         <font style="font-family: Poppins, sans-serif;">BOOK YOUR SPOT NOW</font>
                                     </a>
 
@@ -692,7 +692,7 @@
                                     </div>
 
                                 </div>
-                                <a href="#" role="button" class="transition-all cursor-pointer no-underline border-2 border-solid uppercase border-transparent tracking-75 hover:border-transparent rounded-lg mr-0 mb-0 mt-0 ml-0 flex justify-center items-center font-bold size-21 leading-12 px-8 pt-5 pb-5 text-center" title="" style="color: rgb(193, 52, 56); background-color:rgb(255, 255, 255); " data-bg="rgb(255,255,255)">
+                                <a href="https://docs.google.com/forms/d/1RHN2iakCPgr-LZGdNiH2vauCIVZWOuvULTCDCqeeEmM/edit?pli=1" target="_blank" role="button" class="transition-all cursor-pointer no-underline border-2 border-solid uppercase border-transparent tracking-75 hover:border-transparent rounded-lg mr-0 mb-0 mt-0 ml-0 flex justify-center items-center font-bold size-21 leading-12 px-8 pt-5 pb-5 text-center" title="" style="color: rgb(193, 52, 56); background-color:rgb(255, 255, 255); " data-bg="rgb(255,255,255)">
                                     <font style="font-family: Poppins, sans-serif; color: rgb(58, 140, 233);">BOOK YOUR SPOT&nbsp;</font>
                                 </a>
                             </div>
