--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Anup Kumar - Business Card</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #3498db; /* Blue background */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .card {
-            background-color: white;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 80%;
-            color: black;
-            font-weight: bold; /* Bold text */
-        }
-        .name {
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-        .contact {
-            font-size: 24px;
-        }
-        a {
-            color: #0000EE;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
+</style>
 </head>
 <body>
+
+<h2 style="text-align:center">User Profile Card</h2>
+
+<div class="card">
+  <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+  <h1>Anup Kumar </h1>
+  <p class="title">Be the person you needed most</p>
+  <p>When you were stuck </p>
+  <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+
+  </div>
     <div class="card">
         <div class="name">Anup Kumar</div>
         <div class="contact">
@@ -47,6 +63,11 @@
             Email: <a href="mailto:mail@anupk.com">mail@anupk.com</a><br>
             WhatsApp: <a href="https://wa.me/918368524535">Conect with WhatsApp</a>
         </div>
-    </div>
+  </div>
+
+  <p><button>Contact</button></p>
+</div>
+
 </body>
 </html>
+
