--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-  <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+  <img src="Anup Profile Picture.png" alt="John" style="width:100%">
   <h1>Anup Kumar </h1>
   <p class="title">Be the person you needed most</p>
   <p>When you were stuck </p>
