--- a/index.html
+++ b/index.html
@@ -42,30 +42,19 @@ button:hover, a:hover {
 </head>
 <body>
 
-<h2 style="text-align:center">User Profile Card</h2>
+<h2 style="text-align:center"></h2>
 
 <div class="card">
-  <img src="Anup Profile Picture.png" alt="John" style="width:100%">
+  <img src="Anup Profile Picture.png" alt="Anup" style="width:100%">
   <h1>Anup Kumar </h1>
   <p class="title">Be the person you needed most</p>
   <p>When you were stuck </p>
-  <div style="margin: 24px 0;">
-    <a href="#"><i class="fa fa-dribbble"></i></a> 
-    <a href="#"><i class="fa fa-twitter"></i></a>  
-    <a href="#"><i class="fa fa-linkedin"></i></a>  
-    <a href="#"><i class="fa fa-facebook"></i></a> 
-
-  </div>
-    <div class="card">
-        <div class="name">Anup Kumar</div>
-        <div class="contact">
+  <p class="title">
             Phone: <a href="tel:8368524535">8368524535</a><br>
             Email: <a href="mailto:mail@anupk.com">mail@anupk.com</a><br>
-            WhatsApp: <a href="https://wa.me/918368524535">Conect with WhatsApp</a>
-        </div>
-  </div>
+            WhatsApp: <a href="https://wa.me/918368524535">WhatsApp</a>
+  </p>   
 
-  <p><button>Contact</button></p>
 </div>
 
 </body>
