--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+>
+
+<title>Anup Kumar Sati- Easy Consulting </title>
+<meta name="description" content="Helping you overcome challenges and achieve personal growth.">
+  
 <style>
 body {
   font-family: arial;
@@ -64,14 +69,13 @@ button:hover, a:hover {
 <div class="card">
   <img src="Anup Profile Picture.png" alt="Anup" style="width:100%">
   <h1>Anup Kumar</h1>
-  <p class="title">Be the person you needed most</p>
-  <p>When you were stuck</p>
+  <p class="title">Be the person you needed most, when you were stuck</p>
+  <p>Know that feeling? I'm here to help. Give me a call at</p>
   <div class="contact-info">
-    <a href="tel:8368524535">Phone: 8368524535</a><br>
-    <a href="mailto:mail@anupk.com">Email: mail@anupk.com</a><br>
+    <a href="tel:8368524535"> +918368524535</a><br>
+    <a href="mailto:mail@anupk.com">mail@anupk.com</a><br>
     <a href="https://wa.me/918368524535">WhatsApp</a>
   </div>
-  <button>Contact Me</button>
 </div>
 
 </body>
