--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 body {
   font-family: arial;
   margin: 0;
+  background-color: black; 
 }
 
 .card {
@@ -19,6 +20,7 @@ body {
   margin: 10px auto;
   text-align: center;
   max-width: 400px; /* Adjust for smaller screens */
+  background-color: #fff; /* Added white background for the card */
 }
 
 .title {
