--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <style>
 body {
   font-family: arial;
+  color: white;
   margin: 0;
   background-color: black; 
 }
@@ -20,11 +21,11 @@ body {
   margin: 10px auto;
   text-align: center;
   max-width: 400px; /* Adjust for smaller screens */
-  background-color: #fff; /* Added white background for the card */
+  background-color: #463535; /* Added white background for the card */
 }
 
 .title {
-  color: grey;
+  color: white;
   font-size: 18px;
 }
 
