--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
->
+
 
 <title>Anup Kumar Sati- Easy Consulting </title>
 <meta name="description" content="Helping you overcome challenges and achieve personal growth.">
@@ -11,7 +11,7 @@
 <style>
 body {
   font-family: arial;
-  color: white;
+ 
   margin: 0;
   background-color: black; 
 }
@@ -25,7 +25,7 @@ body {
 }
 
 .title {
-  color: white;
+  color: White;
   font-size: 18px;
 }
 
