--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style>
 body {
   font-family: arial;
- 
+  color: white;
   margin: 0;
   background-color: black; 
 }
@@ -20,6 +20,7 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 10px auto;
   text-align: center;
+  color: white;
   max-width: 400px; /* Adjust for smaller screens */
   background-color: #463535; /* Added white background for the card */
 }
@@ -72,8 +73,8 @@ button:hover, a:hover {
 <div class="card">
   <img src="Anup Profile Picture.png" alt="Anup" style="width:100%">
   <h1>Anup Kumar</h1>
-  <p class="title">Be the person you needed most, when you were stuck</p>
-  <p>Know that feeling? I'm here to help. Give me a call at</p>
+  <p class="title">Be the person you needed most, when </br> you were stuck</p>
+  <p>Know that feeling? I'm here to help </br> Give me a call at</p>
   <div class="contact-info">
     <a href="tel:8368524535"> +918368524535</a><br>
     <a href="mailto:mail@anupk.com">mail@anupk.com</a><br>
