--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
   margin: 10px auto;
   text-align: center;
   color: white;
+  border-radius: 15px
   max-width: 400px; /* Adjust for smaller screens */
   background-color: #463535; /* Added white background for the card */
 }
@@ -32,6 +33,7 @@ body {
 
 .contact-info {
   margin-top: 10px;
+  color: Blue;
 }
 
 button {
