--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-<title>Anup Kumar Sati- Easy Consulting </title>
-<meta name="description" content="Helping you overcome challenges and achieve personal growth.">
+<title>Anup Kumar - Consulting Career Mentor </title>
+<meta name="description" content="Helping you overcome challenges and live a sensible life.">
   
 <style>
 body {
