Update Management Consulting Program.html

--- a/Management Consulting Program.html
+++ b/Management Consulting Program.html
@@ -196,8 +196,8 @@ src="https://www.facebook.com/tr?id=460266454933987&ev=PageView&noscript=1"
 }</script></a><div id="w-node-_3366206d-363c-f857-9621-2e474c525ae2-1a1a3de4" class="text-size-medium"><div class="text-size-medium-2 text-weight-bold">Deepak Mishra</div><div class="text-block-213">COO &amp; CSO, - Adtric Solutions Pvt Ltd</div></div></div><div id="w-node-_24564f70-efee-461e-14f6-05c79cb710d5-1a1a3de4" class="div-block-799"><a href="#" id="w-node-_24564f70-efee-461e-14f6-05c79cb710d6-1a1a3de4" class="lightbox-link-28 w-inline-block w-lightbox"><img src="https://assets-global.website-files.com/625416528a3419ca302b6dd8/651eaef3c8bc88d7e0433f67_Kaushal%20Bhatt%20(1).png" loading="lazy" alt="" class="image-full-size"/><img src="https://assets-global.website-files.com/625416528a3419ca302b6dd8/627decd18016af421cca5d77_play-button.svg" loading="lazy" alt="icon" class="image-383"/><script type="application/json" class="w-json">{
   "items": [
     {
-      "url": "https://vimeo.com/871045267",
-      "originalUrl": "https://vimeo.com/871045267",
+      "url": "hhttps://www.youtube.com/watch?v=eZDN00nD",
+      "originalUrl": "https://www.youtube.com/watch?v=eZDN00nD_qc&t=333s",
       "width": 940,
       "height": 468,
       "thumbnailUrl": "https://i.vimeocdn.com/video/1733394153-d59b15ba51e00c4df5165415b9a0ee3cebc0fe188cf8d985c2d29ddeaa6b9dfc-d?f=webp",
@@ -209,11 +209,11 @@ src="https://www.facebook.com/tr?id=460266454933987&ev=PageView&noscript=1"
 }</script></a><div id="w-node-_24564f70-efee-461e-14f6-05c79cb710d9-1a1a3de4" class="text-size-medium"><div class="text-size-medium-2 text-weight-bold">Kaushal Bhatt</div><div class="text-block-213">Director - Marketing, iQuanti, Inc.</div></div></div><div id="w-node-f9ce3675-ade9-6fc0-467b-f0fb51e21e8a-1a1a3de4" class="div-block-799"><a href="#" id="w-node-f9ce3675-ade9-6fc0-467b-f0fb51e21e8b-1a1a3de4" class="lightbox-link-28 w-inline-block w-lightbox"><img src="https://assets-global.website-files.com/625416528a3419ca302b6dd8/6509959228c771068d7b23ef_Chinmany%20Tamhankar.webp" loading="lazy" alt="" class="image-full-size"/><img src="https://assets-global.website-files.com/625416528a3419ca302b6dd8/627decd18016af421cca5d77_play-button.svg" loading="lazy" alt="icon" class="image-383"/><script type="application/json" class="w-json">{
   "items": [
     {
-      "url": "https://vimeo.com/865842512/bcfc43ad22?share=copy",
-      "originalUrl": "https://vimeo.com/865842512/bcfc43ad22?share=copy",
+      "url": "https://www.youtube.com/watch?v=eZDN00nD",
+      "originalUrl": "https://www.youtube.com/watch?v=eZDN00nD?share=copy",
       "width": 940,
       "height": 529,
-      "thumbnailUrl": "https://i.vimeocdn.com/video/1725895650-10d59ad11dc79196b6b5c4f30a7ceea6a2bad23bdca021125d7270ef82ebbfe8-d?f=webp",
+      "thumbnailUrl": "https://www.youtube.com/watch?v=eZDN00nD",
       "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fplayer.vimeo.com%2Fvideo%2F865842512%3Fh%3Dbcfc43ad22%26app_id%3D122963&dntp=1&display_name=Vimeo&url=https%3A%2F%2Fvimeo.com%2F865842512%2Fbcfc43ad22&image=https%3A%2F%2Fi.vimeocdn.com%2Fvideo%2F1725895650-10d59ad11dc79196b6b5c4f30a7ceea6a2bad23bdca021125d7270ef82ebbfe8-d%3Ff%3Dwebp&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=vimeo\" width=\"940\" height=\"529\" scrolling=\"no\" title=\"Vimeo embed\" frameborder=\"0\" allow=\"autoplay; fullscreen; encrypted-media; picture-in-picture;\" allowfullscreen=\"true\"></iframe>",
       "type": "video"
     }
