--- a/Consulting career.html
+++ b/Consulting career.html
@@ -412,7 +412,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
                         <div class="row" style="transform: translateZ(0px);">
                             <div class="column full" style="width: 100%; flex: 0 0 auto;">
                                 <h1 class="size-68 font-bold leading-12"><span class="size-76">
-                                        <font style="font-family: Poppins, sans-serif;">HOW TO GET INTO <font style="color: rgb(58, 140, 233);">CONSULTING INDUSTRY</font> AND JOIN A SIX-FIGURE JOB WITHOUT TECHNICAL KNOWLEDGE OR AN MBA DEGREE</font>
+                                        <font style="font-family: Poppins, sans-serif;">HOW TO GET GET <font style="color: rgb(58, 140, 233);">A CONSULTING JOB</font> :MASTER KEY PRACTICES, NOT ENDLESS THEORIES </font>
                                     </span><br><span class="text-highlight"><img src="https://tagmango.com/staticassets/1693390367732.png" alt="" data-filename="underline.png"></span></h1>
                             </div>
 
@@ -432,7 +432,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
                                 </div>
                                 <div class="boxed">
                                     <div id="lipsum">
-                                        <p class="leading-12 size-18" style="font-family: Poppins, sans-serif;">Use my simple step by step process to create and package your experience in a way that speaks to your target firm's pain point and goals<br></p>
+                                        <p class="leading-12 size-18" style="font-family: Poppins, sans-serif;">Utilize my Mentorship Program - a straightforward, step-by-step process designed to help you craft and present your experience in alignment with your target firm's pain points and objectives<br></p>
                                     </div>
                                 </div>
                             </div>
@@ -441,7 +441,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
                         <div class="row">
                             <div class="column">
                                 <h1 class="size-48" style="color: rgb(59, 159, 64); font-family: Poppins, sans-serif;">
-                                    <font style="color: rgb(58, 140, 233);">Date : Sunday, 7th January 2024</font>
+                                    <font style="color: rgb(58, 140, 233);"> Introductory Webinar Date : Sunday </br> 7th January 2024</font>
                                 </h1>
                                 <p>
                                     <font style="font-family: Poppins, sans-serif;">
@@ -522,7 +522,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
                         <div class="row">
                             <div class="column full leading-12" style="font-family: Poppins, sans-serif;">
                                 <span class="font-semibold size-32" style="color: rgb(72, 72, 72);">Anup Kumar Sati</span>
-                                <p dir="ltr" class="size-18 leading-14" style="color: rgb(72, 72, 72);">My career spans over 20 years across consulting, technology, and hospitality sectors, where I've held various leadership roles focusing on strategic planning, team management, and driving business growth. On a mission to help people start their career in consulting and live a sensible life.</p>
+                                <p dir="ltr" class="size-18 leading-14" style="color: rgb(72, 72, 72);">My career spans over 20 years across consulting, technology, and hospitality sectors, where I've held various leadership roles focusing on strategic planning, team management, and driving business growth </br> On a mission to help people start their career in consulting and live a sensible life.</p>
                             </div>
                         </div>
                     </div>
@@ -676,7 +676,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
                                 <div class="course-cta-info-box flex items-center gap-1">
                                     <div class="course-cta-info-item flex items-center gap-_5">
                                         <p class="size-16 mt-0 mb-0 font-medium">
-                                            <font style="font-family: Poppins, sans-serif;">2 hrs &nbsp;master class</font>
+                                            <font style="font-family: Poppins, sans-serif;">2 hrs &nbsp;Introductory webinar</font>
                                         </p>
                                     </div>
                                     <div class="course-cta-info-item flex items-center gap-_5">
@@ -698,7 +698,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
 
                                 </div>
                                 <p class="size-16 mt-0 mb-0">
-                                    <font style="font-family: Poppins, sans-serif;">Become part of master class and take your first step to start the exciting journey in consulting&nbsp;</font>
+                                    <font style="font-family: Poppins, sans-serif;">Become part of introductory webinar and take your first step to start the exciting journey in consulting&nbsp;</font>
                                 </p>
                                 <div></div>
                                 <p></p>
