--- a/Consulting career.html
+++ b/Consulting career.html
@@ -441,7 +441,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
                         <div class="row">
                             <div class="column">
                                 <h1 class="size-48" style="color: rgb(59, 159, 64); font-family: Poppins, sans-serif;">
-                                    <font style="color: rgb(58, 140, 233);"> Introductory Webinar Date : Sunday </br> 7th January 2024</font>
+                                    <font style="color: rgb(58, 140, 233);"> Introductory Webinar Date : Sunday 7th January 2024</font>
                                 </h1>
                                 <p>
                                     <font style="font-family: Poppins, sans-serif;">
@@ -522,7 +522,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
                         <div class="row">
                             <div class="column full leading-12" style="font-family: Poppins, sans-serif;">
                                 <span class="font-semibold size-32" style="color: rgb(72, 72, 72);">Anup Kumar Sati</span>
-                                <p dir="ltr" class="size-18 leading-14" style="color: rgb(72, 72, 72);">My career spans over 20 years across consulting, technology, and hospitality sectors, where I've held various leadership roles focusing on strategic planning, team management, and driving business growth </br> On a mission to help people start their career in consulting and live a sensible life.</p>
+                                <p dir="ltr" class="size-18 leading-14" style="color: rgb(72, 72, 72);">My career spans over 20 years across consulting, technology, and hospitality sectors, where I've held various leadership roles focusing on strategic planning, team management, and driving business growth. </br> On a mission to help people start their career in consulting and live a sensible life.</p>
                             </div>
                         </div>
                     </div>
