--- a/Consulting career.html
+++ b/Consulting career.html
@@ -412,7 +412,7 @@ src="https://www.facebook.com/tr?id=368563612492793&ev=PageView&noscript=1"
                         <div class="row" style="transform: translateZ(0px);">
                             <div class="column full" style="width: 100%; flex: 0 0 auto;">
                                 <h1 class="size-68 font-bold leading-12"><span class="size-76">
-                                        <font style="font-family: Poppins, sans-serif;">HOW TO GET GET <font style="color: rgb(58, 140, 233);">A CONSULTING JOB</font> :MASTER KEY PRACTICES, NOT ENDLESS THEORIES </font>
+                                        <font style="font-family: Poppins, sans-serif;">HOW TO GET <font style="color: rgb(58, 140, 233);">A CONSULTING JOB:</font> MASTER KEY PRACTICES, NOT ENDLESS THEORIES </font>
                                     </span><br><span class="text-highlight"><img src="https://tagmango.com/staticassets/1693390367732.png" alt="" data-filename="underline.png"></span></h1>
                             </div>
 
